--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
 
 <body>
@@ -90,21 +90,32 @@
     </header>
     <div class=" bg-black position-relative">
         <h2 class="fw-bolder text-center text-white ff-plus text-3lg lh-120 py-28 mb-0">AMPLIFY and STRETCH GAINS</h2>
-    </div>
-    <div class="min-h-stretch tretch bg-stretch d-flex justify-content-between align-items-center
+
+        <div class="min-h-stretch tretch bg-stretch d-flex justify-content-between align-items-center
         position-relative">
-        <p class="text-white fw-normal lh-160 ff-raleway max-w-554 text-center mx-auto text-sm">We take a different
+            <p class="text-white d-none d-sm-block fw-normal lh-160 ff-raleway max-w-554 text-center mx-auto text-sm">We
+                take a different
+                balanced approach to finding and creating yield opportunities in the everchanging
+                crypto market. Our
+                yield strategies help users stay protected and hedged during bear markets and amplify yield during bull
+                markets without
+                resorting to leverage or other dangerous techniques.</p>
+        </div>
+        <p class="text-white d-sm-none fw-normal lh-160 pb-5 ff-raleway max-w-554 text-center mx-auto text-sm">We
+            take a different
             balanced approach to finding and creating yield opportunities in the everchanging
             crypto market. Our
             yield strategies help users stay protected and hedged during bear markets and amplify yield during bull
             markets without
             resorting to leverage or other dangerous techniques.</p>
         <img src="./assets/images/webp/clouds-bottom.png" alt="clouds img botttom" class="position-absolute clouds">
+
     </div>
     <section class="bg-strategy my-5 py-5">
         <div class="container-lg my-5">
             <h2 class="text-white ff-neue lh-120  text-2lg text-center">Core Strategies</h2>
-            <p class="ff-raleway text-white fw-normal lh-160 max-w-819 text-center mx-auto text-base mb-5">Our initial strategies use powerful
+            <p class="ff-raleway text-white fw-normal lh-160 max-w-819 text-center mx-auto text-base mb-5">Our initial
+                strategies use powerful
                 burgeoning trends like Real Yield,
                 Rebase, and others to generate cutting-edged
                 yield innovations. These yield strategies stretch beyond the drought in stable coins and set the value
